--- a/timelinr.css
+++ b/timelinr.css
@@ -43,7 +43,7 @@ h1,h2,h4,h5,h6 {
 
 	#timeline {
 		width: 500px;
-		height: 600px;
+		height: 500px;
 		overflow: hidden;
 		margin: 40px auto;
 		position: relative;
@@ -51,10 +51,10 @@ h1,h2,h4,h5,h6 {
 	}
 		#dates {
 			width: 100px;
-			height: 600px;
+			height: 500px;
 			overflow: hidden;
 			float: left;
-		}
+		    }
 			#dates li {
 				list-style: none;
 				width: 100px;
@@ -63,7 +63,7 @@ h1,h2,h4,h5,h6 {
 				font-size: 24px;
 				padding-left: 10px;
 				background: url('http://www.csslab.cl/ejemplos/timelinr/latest/images/biggerdot.png') left center no-repeat;
-			}
+			    }
 				#dates a {
 					line-height: 38px;
 					padding-bottom: 10px;
@@ -74,18 +74,25 @@ h1,h2,h4,h5,h6 {
 		
 		#issues {
 			width: 400px;
-			height: 600px;
+			height: 500px;
 			overflow: hidden;
 			float: left;
-		}	
+            -webkit-transform-style: preserve-3d;
+            -moz-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+		}
+
 			#issues li {
 				max-width: 300px; // width: 400px;
-				height: 600px;
+				height: 500px;
 				list-style: none;
                 text-align: center; // add
-                top: 35%;
+                position: relative;
+                top: 50%;
+                transform: translateY(20%);
 
 			}
+
 				#issues li.selected img {
 					-webkit-transform: scale(1.1,1.1);
 					-moz-transform: scale(1.1,1.1);
@@ -116,19 +123,20 @@ h1,h2,h4,h5,h6 {
 					font-size: 34px;
 					text-align: center;
 					text-shadow: #000 1px 1px 2px;
-					margin-bottom: 10px;
+					//margin-bottom: 10px;
 				}
 				#issues li h2 {
 				    text-align: center;
                     color: #ccc;
                     text-shadow: #000 1px 1px 2px;
-                    margin-top: 40px;
-                    margin-bottom: 40px;
+                    //margin: 10px 20px;
+                    //margin-top: 30px;
+                    //margin-bottom: 20px;
 					font-size: 20px;
 				}
 				#issues li p {
 					font-size: 14px;
-					margin: 20px 20px 50px 20px;
+					margin: 10px 20px 20px 20px;
 					font-weight: normal;
 					line-height: 22px;
 					text-shadow: #000 1px 1px 2px;
